maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: not found: type Bool
	 def AtteintBord() :Bool = {
                            ^